--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<p>Hi! I am Revati. I graduated from BITS-Pilani, Goa Campus in 2015, with a degree in Information Systems. 
 	I am currently working as a Software Engineer at <a href="http://flipkart.com">Flipkart</a>, in the payments 
 	team. I love data science, programming and building software.</p>
-	<p>I am also a big Harry Potter fan, (which explains the background image!)</p>
+	<p>I am also a big Harry Potter fan, (which explains the background image)</p>
 	<p>Thanks for dropping by! Feel free to <a href="me@revatidamle.in">email me</a> if you want to get in touch.</p>
 </div>
 
