corrected email link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	I am currently working as a Software Engineer at <a href="http://flipkart.com">Flipkart</a>, in the payments 
 	team. I love data science, programming and building software.</p>
 	<p>I am also a big Harry Potter fan, (which explains the background image)</p>
-	<p>Thanks for dropping by! Feel free to <a href="me@revatidamle.in">email me</a> if you want to get in touch.</p>
+	<p>Thanks for dropping by! Feel free to <a href="mailto:me@revatidamle.in">email me</a> if you want to get in touch.</p>
 </div>
 
 <!--include jquery & backstretch-->
