placing previous image

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 $(function(){
      $(window).resize(function(){
          if($(this).width() >= 767){
-             $.backstretch("harry_potter_new.jpeg", {speed: 150});
+             $.backstretch("bg.jpg", {speed: 150});
          }
       })
       .resize();//trigger resize on page load
