--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@ $(function(){
      $('.backstretch').addClass("dim");
 });
 </script>
-
+<script type="text/javascript">
+ window._mfq = window._mfq || [];
+ (function() {
+   var mf = document.createElement("script");
+   mf.type = "text/javascript"; mf.async = true;
+   mf.src = "//cdn.mouseflow.com/projects/59ce3592-b9a7-4d9b-b361-b39d283e5dbf.js";
+   document.getElementsByTagName("head")[0].appendChild(mf);
+ })();
+</script>
 </body>	
 </html>
