updating resume file

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	team. I love data science, programming and building software.</p>
 	<p>I am also a big Harry Potter fan, (which explains the background image)</p>
 	<p>Thanks for dropping by! Feel free to <a href="mailto:me@revatidamle.in">email me</a> if you want to get in touch.</p>
-	<p>If you are looking for my CV, <a href="/revati_resume.pdf">click here</a>.</p>
+	<p>If you are looking for my CV, <a href="/resume.pdf">click here</a>.</p>
 
 </div>
 
